--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,32 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+    - name: 检查目录结构
+      run: |
+        echo "当前工作目录: $(pwd)"
+        echo "目录内容:"
+        ls -la
+        echo "检查依赖文件是否存在:"
+        if [ -f "requirements.txt" ]; then
+          echo "requirements.txt文件存在"
+        else
+          echo "requirements.txt文件不存在"
+        fi
+        if [ -f "pyproject.toml" ]; then
+          echo "pyproject.toml文件存在"
+        else
+          echo "pyproject.toml文件不存在"
+        fi
     - name: 安装依赖
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        if [ -f "requirements.txt" ]; then
+          echo "使用requirements.txt安装依赖"
+          pip install -r requirements.txt
+        else
+          echo "使用pyproject.toml安装依赖"
+          pip install -e .
+        fi
     - name: 检查代码质量
       run: |
         pip install flake8
