--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,10 +17,21 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
+    - name: 检查目录结构
+      run: |
+        echo "当前工作目录: $(pwd)"
+        echo "目录内容:"
+        ls -la
     - name: 安装依赖
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        if [ -f "requirements.txt" ]; then
+          echo "使用requirements.txt安装依赖"
+          pip install -r requirements.txt
+        else
+          echo "使用pyproject.toml安装依赖"
+          pip install -e .
+        fi
         pip install pyinstaller
     - name: 构建可执行文件 (Windows)
       if: matrix.os == 'windows-latest'
