--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
         else
           echo "pyproject.toml文件不存在"
         fi
+      shell: bash
     - name: 安装依赖
       run: |
         python -m pip install --upgrade pip
@@ -46,10 +47,13 @@ jobs:
           echo "使用pyproject.toml安装依赖"
           pip install -e .
         fi
+      shell: bash
     - name: 检查代码质量
       run: |
         pip install flake8
         flake8 .
+      shell: bash
     - name: 运行测试
       run: |
         python -m unittest discover tests
+      shell: bash
