--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,7 @@ jobs:
         else
           echo "ERROR: requirements.txt文件不存在"
         fi
+      shell: bash
     - name: 安装依赖
       run: |
         python -m pip install --upgrade pip
@@ -35,6 +36,7 @@ jobs:
           echo "使用pyproject.toml安装依赖"
           pip install -e .
         fi
+      shell: bash
     - name: 安装测试依赖
       run: |
         if [ -f "requirements-dev.txt" ]; then
@@ -42,6 +44,8 @@ jobs:
         else
           pip install pytest pytest-qt
         fi
+      shell: bash
     - name: 运行测试
       run: |
         python -m unittest discover tests
+      shell: bash
