--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,31 +19,23 @@ jobs:
       run: |
         pwd
         ls -la
-        echo "检查requirements.txt是否存在:"
-        if [ -f "requirements.txt" ]; then
-          echo "requirements.txt文件存在"
-          cat requirements.txt
+        echo "检查pyproject.toml是否存在:"
+        if [ -f "pyproject.toml" ]; then
+          echo "pyproject.toml文件存在"
         else
-          echo "ERROR: requirements.txt文件不存在"
+          echo "ERROR: pyproject.toml文件不存在"
         fi
       shell: bash
     - name: 安装依赖
       run: |
         python -m pip install --upgrade pip
-        if [ -f "requirements.txt" ]; then
-          pip install -r requirements.txt
-        else
-          echo "使用pyproject.toml安装依赖"
-          pip install -e .
-        fi
+        echo "使用pyproject.toml安装依赖"
+        pip install -e .
       shell: bash
     - name: 安装测试依赖
       run: |
-        if [ -f "requirements-dev.txt" ]; then
-          pip install -r requirements-dev.txt
-        else
-          pip install pytest pytest-qt
-        fi
+        echo "安装测试依赖"
+        pip install pytest pytest-qt
       shell: bash
     - name: 运行测试
       run: |
