--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,17 +16,14 @@ classifiers = [
     "Intended Audience :: End Users/Desktop",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Office/Business",
     "Topic :: Utilities",
 ]
 dynamic = ["version"]
 dependencies = [
     # 核心PDF处理依赖
-    "PyPDF2>=1.26.0",
+    "pypdf>=3.0.0",
     "reportlab>=3.5.0",
     # GUI界面依赖
     "PyQt5>=5.15.0",
